tests/baselines/reference/enumErrors.errors.txt
==== tests/cases/compiler/enumErrors.ts (15 errors) ====
    // Enum named with PredefinedTypes
    enum any { }
         ~~~
!!! error TS1059: Enum name cannot be 'any'.
         ~~~
!!! error TS2000: Duplicate identifier 'any'.
    enum number { }
         ~~~~~~
!!! error TS1059: Enum name cannot be 'number'.
         ~~~~~~
!!! error TS2000: Duplicate identifier 'number'.
    enum string { }
         ~~~~~~
!!! error TS1059: Enum name cannot be 'string'.
         ~~~~~~
!!! error TS2000: Duplicate identifier 'string'.
    enum boolean { }
         ~~~~~~~
!!! error TS1059: Enum name cannot be 'boolean'.
         ~~~~~~~
!!! error TS2000: Duplicate identifier 'boolean'.
    
    // Enum with computed member initializer of type Number
    enum E5 {
        C = new Number(30)
        ~~~~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'Number' to 'E5'.
    }
    
    enum E9 {
        A,
        B = A
    }
    
    //Enum with computed member intializer of different enum type
    // Bug 707850: This should be allowed
    enum E10 {
        A = E9.A,
        ~~~~~~~~
!!! error TS2011: Cannot convert 'E9' to 'E10'.
        B = E9.B
        ~~~~~~~~
!!! error TS2011: Cannot convert 'E9' to 'E10'.
    }
    
    // Enum with computed member intializer of other types
    enum E11 {
        A = '',
        ~~~~~~
!!! error TS2011: Cannot convert 'string' to 'E11'.
        B = new Date(),
        ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'Date' to 'E11'.
        C = window,
            ~~~~~~
!!! error TS2095: Could not find symbol 'window'.
        D = {}
        ~~~~~~
!!! error TS2011: Cannot convert '{}' to 'E11'.
    }
    